# myHealth

./: .gitignore  .hintrc  CLAUDE.md  DEMO.md  EXTRACTION_PROMPT.txt  README.md  deprecations.json  index.html  package-lock.json  package.json  publisher.trust.json  release-notes.md  release.signing.json  schema.manifest.json  sharedcorelib.security.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/pages/: .gitignore  README.md  index.template.html  preview.bat  sample-release-notes.md  serve.py
.github/workflows/: build-release.yml  security.yml
content/: catalog.json
content/exercises/: index.ts
content/yoga/: art.ts  index.ts
demo/: build.ts  config.ts  make-video.ps1  record.ts  reset.ts  run-demo.ps1
demo/edit/: marketing.edl.ts  render.ts  tutorial.ts
demo/scenarios/: 01-welcome-profile.ts  02-log-vital.ts  03-goal-eta.ts  04-trends.ts  06-medication.ts  (+5 more)
docs/: PLAN.md  PRODUCT_FEATURES.md  SHARED_CORE.md  medical-document-parser-architecture.md
scripts/: build-content.mjs  build-ocr-assets.mjs  build-yoga-bundle.mjs  content-dev.mjs  ensure-ios-plist.mjs  gen-schema-manifest.mjs  start-seed.mjs  start-tier.mjs
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_profiles.sql  0003_metrics.sql  0004_goals.sql  0005_reminders.sql  0006_daily_habits.sql  0007_medications.sql  0008_profile_emergency.sql  0009_documents.sql
src-tauri/src/: core_bootstrap.rs  lib.rs  main.rs
(+213 files in other folders)
