[package]
name = "myhealth"
version = "0.1.1"
description = "Personal & family health record — client-only, offline, cross-platform"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "myhealth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-sql = { version = "2.1", features = ["sqlite"] }
tauri-plugin-stronghold = "2.0"
argon2 = "0.5"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
